--- a/_includes/navgation.html
+++ b/_includes/navgation.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/index.html">Blog</a>
+            <a class="navbar-brand" href="/index.html">Me</a>
         </div>
         <div class="collapse navbar-collapse" id="ba-navbar-collapse">
             <ul class="nav navbar-nav navbar-left">
@@ -15,7 +15,7 @@
                     <a href="/about.html">Aout Me</a>
                 </li>
                 <li>
-                    <a href="/contact.html">Contact</a>
+                    <a href="/contact.html">Contact Me</a>
                 </li>
             </ul>
         </div>
