--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12" align="center">
-                <p>Copyright &copy; 2016-2017 hanvskun@hotamil.com All Rights Reserved</p>
+                <p>Copyright &copy; 2016-2017 <a href="https://github.com/SnailTowardThesun">SnailTowardThesun</a> All Rights Reserved</p>
+                <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
             </div>
         </div>
     </div>
