--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>{{ page.title }}</title>
 <link rel="shortcut icon" href="/favicon.ico?" type="image/x-icon">
 <link rel="icon" href="/favicon.ico?" type="image/x-icon">
 <meta author="hanvskun@hotmail.com">
