add github link

--- a/_includes/navgation.html
+++ b/_includes/navgation.html
@@ -17,6 +17,9 @@
                 <li>
                     <a href="/contact.html">Contact Me</a>
                 </li>
+                <li>
+                    <a href="https://github.com/SnailTowardThesun">View on Github</a>
+                </li>
             </ul>
         </div>
     </div>
