--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,15 @@
 <!DOCTYPE>
 <html>
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?2217253b27dcf0a7a0620accbd4fdb37";
+            var s = document.getElementsByTagName("script")[0]; 
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+
     <head>
         {% include header.html %}
     </head>
